<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="minDistanceBetweenTwoMines">50.0</string>
    <string name="enter">Войти</string>
    <string name="enter_nickname">Введите логин</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">Mines</string>
    <string name="mail">Почта</string>
    <string name="firstname">Имя</string>
    <string name="secondname">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="sex">Пол</string>
    <string name="registrationDate">Дата регистрации</string>
    <string name="plug">Заглушка</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="mine_name">Название постройки</string>
    <string name="mine_lvl">Уровень шахты: </string>
    <string name="mine_owner">Владелец шахты: </string>
    <string name="mine_type">Тип шахты: </string>
    <string name="OK">ОК</string>
    <string name="delete">Удалить</string>
    <string name="minesOwner">Владелец шахт:</string>
    <string name="mineWoodInAll">Лесопилок:</string>
    <string name="mineStoneInAll">Рудников:</string>
    <string name="mineSandInAll">Карьеров:</string>
    <string name="mineInAll">Итого:</string>
    <string name="close">Закрыть</string>
    <string name="forExample">Например: "Лесопилка в парке" или "Рудник возле метро"</string>
    <string name="clay">Глины</string>
    <string name="wood">Дерева</string>
    <string name="stone">Камня</string>
    <string name="gold">Золота</string>
    <string name="openHQ">Открыть штаб</string>
    <string name="buildingsOwner">Владелец </string>
    <string name="buildingHQInAll">Штабов</string>
    <string name="building_owner">Владелец здания</string>
    <string name="building_lvl">Уровень здания</string>
    <string name="building_type">Тип здания</string>

    <!--<string name="app_name">Today</string>-->
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">загрузка...</string>
    <string name="nickname">Nickname</string>
    <string name="nnnnn">NickName</string>
    <string name="new_name">Переименовать постройку</string>
    <string name="turnOnGPS">Разрешите приложению доступ к местоположению в настройках телефона!</string>
    <string name="update_building_text">Улучшить постройку?</string>
    <string name="update_cost">Стоимость улучшения</string>
    <string name="cost">Стоимость</string>
    <string name="building_income">Приход</string>
    <string name="after_update">После улучшения</string>
    <string name="cost_update">Стоимость улучшения</string>

    <string-array name="mine_types_list">
        <item>Лесопилка</item>
        <item>Рудник</item>
        <item>Карьер</item>
    </string-array>

</resources>
