<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:paddingLeft="20dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="70"
        android:columnCount="4"
        android:rowCount="9">

        <TextView
            android:id="@+id/tvUserMail"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:paddingRight="20dp"
            android:text="@string/mail"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:inputType="text"
            android:padding="5dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvUserNickName"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textStyle="bold"
            android:layout_row="2"
            android:paddingRight="20dp"
            android:text="@string/nickname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUserNickName"
            android:layout_width="match_parent"
            android:layout_column="1"
            android:textStyle="bold"
            android:layout_row="2"
            android:inputType="text"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <TextView
            android:id="@+id/tvUserFirstName"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:paddingRight="20dp"
            android:text="@string/firstname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUserFirstName"
            android:layout_width="match_parent"
            android:layout_column="1"
            android:layout_row="3"
            android:inputType="text"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <TextView
            android:id="@+id/tvUserSecondName"
            android:layout_column="0"
            android:layout_row="4"
            android:paddingRight="20dp"
            android:text="@string/secondname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUserSecondName"
            android:layout_width="match_parent"
            android:layout_column="1"
            android:layout_row="4"
            android:inputType="text"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <TextView
            android:id="@+id/tvUserAge"
            android:layout_column="0"
            android:layout_row="5"
            android:paddingRight="20dp"
            android:text="@string/age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUserAge"
            android:layout_width="100dp"
            android:layout_column="1"
            android:layout_row="5"
            android:inputType="number"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <TextView
            android:id="@+id/tvUserSex"
            android:layout_column="0"
            android:layout_row="6"
            android:paddingRight="20dp"
            android:text="@string/sex"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUserSex"
            android:layout_width="100dp"
            android:layout_column="1"
            android:layout_row="6"
            android:inputType="text"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />
    </GridLayout>

    <TextView
        android:id="@+id/tvRegistrationDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:paddingTop="30dp"
        android:text="@string/registrationDate"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvRegistrationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:text="@string/plug"
        android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancelSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_logout_from_google" />

        <Button
            android:id="@+id/btn_revoke_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_revoke_access" />

    </LinearLayout>


</LinearLayout>