<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBuildingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/buildingsOwner"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tvBuildingText"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvBuildingList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMainIcon" />

    <ImageView
        android:id="@+id/ivMainIcon"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBuildingHQText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/buildingHQInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingAllText" />

    <TextView
        android:id="@+id/tvBuildingHQInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvBuildingHQText"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingInAll" />


    <TextView
        android:id="@+id/tvBuildingAllText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/mineInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingText" />

    <TextView
        android:id="@+id/tvBuildingInAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvBuildingAllText"
        app:layout_constraintTop_toBottomOf="@+id/tvOwnerName" />


    <TextView
        android:id="@+id/tvBuildingWoodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/mineWoodInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingHQText" />

    <TextView
        android:id="@+id/tvBuildingWoodInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvBuildingWoodText"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingHQInfo" />


    <TextView
        android:id="@+id/tvBuildingStoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/mineStoneInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingWoodText" />

    <TextView
        android:id="@+id/tvBuildingStoneInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingWoodInfo"
        app:layout_constraintLeft_toRightOf="@+id/tvBuildingStoneText"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tvBuildingClayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mineSandInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingStoneText" />

    <TextView
        android:id="@+id/tvBuildingClayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvBuildingClayText"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBuildingStoneInfo" />


</android.support.constraint.ConstraintLayout>