<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvMinesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/minesOwner"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tvMinesText"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvMinesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMainIcon" />

    <ImageView
        android:id="@+id/ivMainIcon"
        android:layout_width="121dp"
        android:layout_height="121dp"
        app:srcCompat="@drawable/mine_list_picture"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvMineWoodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mineWoodInAll"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMinesText"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvMineWoodInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvMineWoodText"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvOwnerName" />

    <TextView
        android:id="@+id/tvMineStoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mineStoneInAll"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMineWoodText"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvMineStoneInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvMineStoneText"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMineWoodInfo" />

    <TextView
        android:id="@+id/tvMineSandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mineSandInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMineStoneText" />

    <TextView
        android:id="@+id/tvMineSandInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvMineSandText"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMineStoneInfo" />

    <TextView
        android:id="@+id/tvMineAllText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mineInAll"
        app:layout_constraintLeft_toRightOf="@+id/ivMainIcon"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMineSandText" />

    <TextView
        android:id="@+id/tvMineInAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/tvMineAllText"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMineSandInfo" />

</android.support.constraint.ConstraintLayout>